--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -43,6 +43,19 @@
   }
 }
 
+#shopping-bag{
+  position: relative;
+}
+
+.num-item-in-cart {
+  position: absolute;
+  top: 29%;
+  left: 43%;
+  font-size: 10px;
+  z-index: 100;
+  color: white;
+}
+
 
 //login and sign up menu
 #user-menu{
