--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@product) do |f| %>
-  <%#= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true}%>
+  <%#= image_tag "", width: 200, class: "hidden", id: "photo-preview" %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true, class: 'hidden', id: 'photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
   <div class='category-form-group'>
     <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
   </div>
@@ -9,10 +9,10 @@
   <%= f.input :description %>
   <%= f.input :sku %>
   <%= f.input :price %>
-  <%= f.input :stock_XS, as: :integer, input_html: { value: nil }  %>
-  <%= f.input :stock_S, as: :integer, input_html: { value: nil }  %>
-  <%= f.input :stock_M, as: :integer, input_html: { value: nil }  %>
-  <%= f.input :stock_L, as: :integer, input_html: { value: nil }  %>
-  <%= f.input :stock_XL, as: :integer, input_html: { value: nil }  %>
+  <%= f.input :stock_XS, as: :integer, input_html: { value: nil }%>
+  <%= f.input :stock_S, as: :integer, input_html: { value: nil }%>
+  <%= f.input :stock_M, as: :integer, input_html: { value: nil }%>
+  <%= f.input :stock_L, as: :integer, input_html: { value: nil }%>
+  <%= f.input :stock_XL, as: :integer, input_html: { value: nil }%>
   <%= f.submit 'Add product', class: "add-cart-btn"%>
 <% end %>
