--- a/app/assets/stylesheets/pages/_product.scss
+++ b/app/assets/stylesheets/pages/_product.scss
@@ -4,5 +4,15 @@
   cursor: pointer;
   font-weight: 500;
   background: white;
-  border-radius: 2px;
+  border-radius: 50px;
+  margin: 10px;
 }
+
+.photo-preview {
+  display: flex;
+  margin: 30px;
+  img {
+    opacity: 0.6;
+  }
+}
+
