--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,20 +1,25 @@
-<%= simple_form_for(@product) do |f| %>
-  <%= image_tag "", width: 200, class: "hidden photo-preview-1"%>
-  <%= f.input :photo_1, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
-  <%= image_tag "", width: 200, class: "hidden photo-preview-2"%>
-  <%= f.input :photo_2, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
-  <div class='category-form-group'>
-    <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
-  </div>
-  <%= f.input :label_ids, as: :check_boxes, collection: Label.all, label: 'Label'%>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :sku %>
-  <%= f.input :price %>
-  <%= f.input :stock_XS, as: :integer, input_html: { value: nil }%>
-  <%= f.input :stock_S, as: :integer, input_html: { value: nil }%>
-  <%= f.input :stock_M, as: :integer, input_html: { value: nil }%>
-  <%= f.input :stock_L, as: :integer, input_html: { value: nil }%>
-  <%= f.input :stock_XL, as: :integer, input_html: { value: nil }%>
-  <%= f.submit 'Add product', class: "add-cart-btn"%>
-<% end %>
+<div>
+  <%= simple_form_for(@product) do |f| %>
+    <div class="photo-preview">
+      <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-1"%>
+      <%= f.input :photo_1, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo photo-1'}, label: '+' %>
+      <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-2"%>
+      <%= f.input :photo_2, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo photo-2'}, label: '+' %>
+    </div>
+    <div class='category-form-group'>
+      <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
+    </div>
+    <%= f.input :label_ids, as: :check_boxes, collection: Label.all, label: 'Label'%>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :sku %>
+    <%= f.input :price %>
+    <%= f.input :stock_XS, as: :integer, input_html: { value: nil }%>
+    <%= f.input :stock_S, as: :integer, input_html: { value: nil }%>
+    <%= f.input :stock_M, as: :integer, input_html: { value: nil }%>
+    <%= f.input :stock_L, as: :integer, input_html: { value: nil }%>
+    <%= f.input :stock_XL, as: :integer, input_html: { value: nil }%>
+    <%= f.submit 'Add product', class: "add-cart-btn"%>
+  <% end %>
+
+</div>
