number of items in cart in navbar update dynamically without reload

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,7 +46,8 @@
 
       <% if @cart.line_items.length == 0 %>
         <li id="shopping-bag"><%= link_to cart_path(@cart), class: 'icon' do %>
-          <%= image_tag 'shopping-bag-icon-white.svg' %>
+          <%= image_tag 'shopping-bag-icon-white.svg', class: 'bag-img'%>
+          <span class="num-item-in-cart no-display">0</span>
           <% end %>
         </li>
       <% else %>
