--- a/app/assets/stylesheets/components/_merchant-details.scss
+++ b/app/assets/stylesheets/components/_merchant-details.scss
@@ -11,23 +11,26 @@
   }
 }
 .merchant-labels{
-  align-self: center;
+  display: grid;
+  width: 60px;
   height: 100%;
-  width: 100%;
-  border-right: 1px solid black;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 14px;
+  padding-left: 50px;
+  img{
+    width:60px;
+  }
 }
 
 .merchant-links{
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
-  height:64%;
+  justify-content: center;
+  height:100%;
   text-align: center;
   align-self: center;
   font-size: 13px;
+  border-left: 1px solid black;
   a{
     color: black;
   }
@@ -41,9 +44,9 @@
   align-items: center;
   width: 24%;
   align-self: center;
+  padding-bottom: 20px;
   img{
     width: 23px;
-    margin-left:16px;
   }
 }
 
