--- a/app/assets/stylesheets/components/_merchant-header.scss
+++ b/app/assets/stylesheets/components/_merchant-header.scss
@@ -1,9 +1,16 @@
 .merchant-header{
   height: 450px;
   display: flex;
-  margin-bottom: 100px
+  margin-bottom: 100px;
+  align-items: center;
+  justify-content: space-between;
 }
-
+.merchant-header-left{
+  height:100%;
+}
+.merchant-header-right{
+  width: 40%;
+}
 .blue-rectangle{
   background: #D7ECF1;
   height: 100%;
@@ -16,7 +23,7 @@
   position: relative;
   bottom: 422px;
   left: 82px;
-  width: 100%;
+  width: 140%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,7 +41,6 @@
 }
 .merchant-gallery{
   display: flex;
-  width: 147%;
   justify-content: space-between;
   align-items: center;
   img{
