--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,7 +6,7 @@
   padding: 8px 10px;
   text-align: center;
   border: 0;
-  width: 100%;
+  width: 250px;
   &:hover{
     color: white;
     // box-shadow:
