--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,5 +1,4 @@
 #product-carousel{
-  width: 300px;
   height: 400px;
   justify-self: end;
 }
@@ -10,7 +9,7 @@
   img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
 .carousel-inner{
