--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,19 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <%= render 'shared/navbar', :categories => Category.all %>
+    <% if controller_name == "pages" %>
+      <%= render 'shared/navbar', :categories => Category.all %>
+    <% elsif controller_name == "carts" %>
+      <%= render 'shared/navbar', :categories => Category.all %>
+    <% elsif controller_name == "products" %>
+      <%= render 'shared/navbar', :categories => Category.all %>
+    <% elsif user_signed_in? %>
+      <%= render 'shared/navbar', :categories => Category.all %>
+    <% elsif !merchant_signed_in? %>
+      <%= render 'shared/navbar', :categories => Category.all %>
+    <% else %>
+      <%= render 'shared/navbar_admin' %>
+    <% end %>
     <%= yield %>
     <%= render 'shared/flashes' %>
     <%= render 'shared/footer' %>
