--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -40,26 +40,9 @@
         <li>Dashboard</li>
         <li>Inventory</li>
         <li>Orders</li>
-        <li>Settings</li>
     </ul>
     <ul class="icon-menu">
-      <li class="icon" id="connect-user"><a href="#"><%= image_tag 'user-icon.svg' %></a></li>
-      <li class="icon"><a href="#"><%= image_tag 'love-list-icon.svg' %></a></li>
-
-      <% if @cart.line_items.length == 0 %>
-        <li id="shopping-bag"><%= link_to cart_path(@cart), class: 'icon' do %>
-          <%= image_tag 'shopping-bag-icon-white.svg', class: 'bag-img'%>
-          <span class="num-item-in-cart no-display">0</span>
-          <% end %>
-        </li>
-      <% else %>
-        <li id="shopping-bag"><%= link_to cart_path(@cart), class: 'icon' do %>
-          <%= image_tag 'shopping-bag-icon-black.svg', class: 'bag-img' %>
-          <span class="num-item-in-cart"><%= total_cart_items %></span>
-          <% end %>
-        </li>
-      <% end %>
-
+      <li><a href="#">Account</a></li>
       <li><a href="#">FR</a></li>
     </ul>
 
@@ -85,7 +68,7 @@
 </div>
 <div id="user-menu">
     <%= link_to 'Log out', destroy_user_session_path, method: 'DELETE', class: 'hidden' %>
-  <% if user_signed_in? %>
+  <% if merchant_signed_in? %>
   <% else %>
   <ul>
     <li><%= link_to 'Log in',  new_user_session_path, class: 'hidden'%></li>
