--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -12,16 +12,13 @@
                 <a href="/"><%= image_tag 'heron-logo.png' %></a>
               </div>
               <div class="overlay-menu">
-                <p>Produits</p>
+                <p>Management</p>
                 <ul>
                   <li>Dashboard</li>
                   <li>Inventory</li>
                   <li>Orders</li>
-                  <li>Settings</li>
                 </ul>
-                <p><a href="#">Boutiques</a></p>
-                <p><a href="#">Mon compte</a></p>
-                <p><a href="#">Contact</a></p>
+                <p><a href="#">Account</a></p>
               </div>
             </div>
           </div>
