Created temporary routes for order and inventory for merchant model, added link to each views in merchant navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <% elsif !merchant_signed_in? %>
       <%= render 'shared/navbar', :categories => Category.all %>
     <% else %>
-      <%= render 'shared/navbar_admin' %>
+      <%= render 'shared/navbar_merchant' %>
     <% end %>
     <%= yield %>
     <%= render 'shared/flashes' %>
