--- a/app/views/shared/_navbar_merchant.html.erb
+++ b/app/views/shared/_navbar_merchant.html.erb
@@ -14,9 +14,9 @@
               <div class="overlay-menu">
                 <p>Management</p>
                 <ul>
-                  <li>Dashboard</li>
-                  <li>Inventory</li>
-                  <li>Orders</li>
+                  <<li><a href="/dashboard">Dashboard</a></li>
+                  <li><a href="/inventory">Inventory</a></li>
+                  <li><a href="/order">Orders</a></li>                
                 </ul>
                 <p><a href="#">Account</a></p>
               </div>
@@ -34,13 +34,13 @@
   </div>
   <div class="main-menu">
     <ul class="categories-list">
-        <li>Dashboard</li>
-        <li>Inventory</li>
-        <li>Orders</li>
+        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/inventory">Inventory</a></li>
+        <li><a href="/order">Orders</a></li>
     </ul>
     <ul class="icon-menu">
       <li><a href="#">Account</a></li>
-      <li><a href="#">FR</a></li>
+      <li><a href="#">EN</a></li>
     </ul>
 
 
