--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,14 +12,14 @@
                 <a href="/"><%= image_tag 'heron-logo.png' %></a>
               </div>
               <div class="overlay-menu">
-                <p>Produits</p>
+                <p>Products</p>
                 <ul>
                   <% categories.each do |category|%>
                     <li><%= link_to category.name, category_products_path(category.id) %></li>
                   <% end %>
                 </ul>
                 <p><a href="#">Boutiques</a></p>
-                <p><a href="#">Mon compte</a></p>
+                <p><a href="#">My Account</a></p>
                 <p><a href="#">Contact</a></p>
               </div>
             </div>
@@ -58,7 +58,7 @@
         </li>
       <% end %>
 
-      <li><a href="#">FR</a></li>
+      <li><a href="#">EN</a></li>
     </ul>
 
 
