Added iconify to app for icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,6 @@
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
   </body>
 </html>
