--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,18 +1,22 @@
 <% if @cart.line_items.length == 0 %>
   <p>Your cart is empty</p>
+<% else %>
+  <ul>
+    <% @cart.line_items.each do |line_item| %>
+      <li>
+        <%= line_item.product_variant.product.name %><br>
+        <%= line_item.product_variant.product.merchant.name %><br>
+        Unit price: <%= line_item.product_variant.product.price %>$<br>
+        <br>
+        Quantity: <%= line_item.quantity %><br>
+        <%= link_to line_item_path(line_item.id), method: "delete" do %>
+          <i class="far fa-trash-alt"></i>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+
+  <p>Total: <%= @cart.total_cart_price %>$</p>
 <% end %>
 
-<ul>
-  <% @cart.line_items.each do |line_item| %>
-    <li>
-      <%= line_item.product_variant.product.name %><br>
-      <%= line_item.product_variant.product.merchant.name %><br>
-      Price: <%= line_item.product_variant.product.price %>$<br>
-      <br>
-      Quantity: <%= line_item.quantity %><br>
-      <%= link_to line_item_path(line_item.id), method: "delete" do %>
-        <i class="far fa-trash-alt"></i>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+
