--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,10 +1,14 @@
-<div>
+<div class="content">
   <%= simple_form_for(@product) do |f| %>
     <div class="photo-preview">
       <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-1"%>
       <%= f.input :photo_1, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo photo-1'}, label: '+' %>
       <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-2"%>
-      <%= f.input :photo_2, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo photo-2'}, label: '+' %>
+      <%= f.input :photo_2, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo hidden photo-2'}, label: '+' %>
+      <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-3"%>
+      <%= f.input :photo_3, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo hidden photo-3'}, label: '+' %>
+      <%= image_tag "", width: 200, height: 300, class: "hidden photo-preview-4"%>
+      <%= f.input :photo_4, as: :file, input_html: { value: nil, class: 'hidden photo-input'}, label_html: { class: 'upload-photo hidden photo-4'}, label: '+' %>
     </div>
     <div class='category-form-group'>
       <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
@@ -25,5 +29,4 @@
     <%= f.input :stock_XL, as: :integer, input_html: { value: nil }%>
     <%= f.submit 'Add product', class: "add-cart-btn"%>
   <% end %>
-
 </div>
