--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -22,7 +22,7 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :sku %>
-    <%= f.input :price %>
+    <%= f.input :price_cents %>
     <%= f.input :stock_XS, as: :integer, input_html: { value: nil }%>
     <%= f.input :stock_S, as: :integer, input_html: { value: nil }%>
     <%= f.input :stock_M, as: :integer, input_html: { value: nil }%>
