--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -62,7 +62,7 @@
               </div>
             </div>
             <div class="product-price">
-              <p>Price: <%= @product.price %>$</p>
+              <p>Price: <%= @product.price %><%= currency_symbol %></p>
             </div>
 
             <%= button_to 'ADD TO CART', line_items_path(product_variant_id: @product.product_variants[0]), class: 'add-cart-btn add-to-cart' %>
