edit the produt new page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,7 @@
 // Import your components CSS files here.
+@import "add-to-cart-success-popup";
+@import "placeholder";
+@import "product-form";
 @import "alert";
 @import "avatar";
 @import "breadcrumb";
@@ -19,5 +22,3 @@
 @import "product-card";
 @import "product-comment";
 @import "product-details-card";
-@import "add-to-cart-success-popup";
-@import "placeholder";
