--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,11 @@
 <div class="container m-1 placeholder">
   <h1>Pages#Dashboard</h1>
   <p>Find me in app/views/pages/dasboard.html.erb</p>
-
   
-  <%= link_to image_tag("blue-on-dark.png"), stripe_button_link %>
+	<% if @merchant.stripe_user_id %>
+	  Connected with Stripe
+	<% else %>
+	  <%= link_to image_tag("blue-on-dark.png"), stripe_button_link %>
+	<% end %>
+
 </div>
