added size to form

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -24,16 +24,17 @@
     </div>
     <div class='category-form-group'>
       <%= f.input :category, input_html: { value: nil }, as: :radio_buttons, collection: Category.all %>
-      <%= f.input :sub_category_id, collection: SubCategory.where('category_id = 1'), wrapper_html: { class: "hidden fashion-sub sub-categories-form" }%>
-      <%= f.input :sub_category_id, collection: SubCategory.where('category_id = 2'), wrapper_html: { class: "hidden beauty-sub sub-categories-form" }%>
-      <%= f.input :sub_category_id, collection: SubCategory.where('category_id = 3'), wrapper_html: { class: "hidden food-sub sub-categories-form" }%>
-      <%= f.input :sub_category_id, collection: SubCategory.where('category_id = 4'), wrapper_html: { class: "hidden home-sub sub-categories-form" }%>
+      <%= f.association :sub_category, wrapper_html: { class: "hidden fashion-sub sub-categories-form" }%>
+      <%#= f.input :sub_category_id, collection: SubCategory.where('category_id = 2'), wrapper_html: { class: "hidden beauty-sub sub-categories-form" }%>
+      <%#= f.input :sub_category_id, collection: SubCategory.where('category_id = 3'), wrapper_html: { class: "hidden food-sub sub-categories-form" }%>
+      <%#= f.input :sub_category_id, collection: SubCategory.where('category_id = 4'), wrapper_html: { class: "hidden home-sub sub-categories-form" }%>
     </div>
     <%= f.input :label_ids, as: :check_boxes, collection: Label.all, label: 'Label'%>
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :sku %>
     <%= f.input :price_cents %>
+    <%= f.input :size, collection: ['OS', 'Diffrent Sizes'] %>
     <%= f.input :stock_XS, as: :integer, input_html: { value: nil }%>
     <%= f.input :stock_S, as: :integer, input_html: { value: nil }%>
     <%= f.input :stock_M, as: :integer, input_html: { value: nil }%>
