--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -14,9 +14,8 @@
               <div class="overlay-menu">
                 <p>Management</p>
                 <ul>
-                  <<li><a href="/dashboard">Dashboard</a></li>
-                  <li><a href="/inventory">Inventory</a></li>
-                  <li><a href="/order">Orders</a></li>
+                  <<li><a href="/invitations">Invitations</a></li>
+                  <li><a href="/merchants/invitation/new">Send New Invitation</a></li>
                 </ul>
                 <p><a href="#">Account</a></p>
               </div>
@@ -34,9 +33,8 @@
     <a href="/"><%= image_tag 'heron-logo.png' %></a>
 
     <ul class="categories-list">
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="/inventory">Inventory</a></li>
-        <li><a href="/order">Orders</a></li>
+        <li><a href="/invitations">Invitations</a></li>
+        <li><a href="/merchants/invitation/new">Send New invitations</a></li>
     </ul>
   </div>
 
