--- a/app/views/shared/_navbar_merchant.html.erb
+++ b/app/views/shared/_navbar_merchant.html.erb
@@ -18,7 +18,7 @@
                   <li><a href="/inventory">Inventory</a></li>
                   <li><a href="/order">Orders</a></li>
                 </ul>
-                <p><a href="#">Account</a></p>
+                <p><a href="/account">Account</a></p>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
 
   <div class="icons-menu">
     <ul class="user-love-icon-menu">
-      <li><a href="#">Account</a></li>
+      <li><a href="/account">Account</a></li>
     </ul>
 
     <ul class="language-icon-menu">
