--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -17,7 +17,7 @@
   </ul>
 
   <p>Total: <%= @cart.total_cart_price %><%= currency_symbol %></p>
-  <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
+  <%= button_to 'BUY NOW', class: 'add-cart-btn' %>
 <% end %>
 
 
