change the agolia form and edit js files to resolve console issue

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,9 @@
+
+//overwrite css form bootsrap
+.form-control{
+  font-size: 0.8rem;
+}
+
 .connexion-forms{
   display: flex;
   flex-direction: column;
