--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,6 @@
 // Import your components CSS files here.
 @import "add-to-cart-success-popup";
-@import "placeholder";
-@import "product-form";
+@import "agolia";
 @import "alert";
 @import "avatar";
 @import "breadcrumb";
@@ -19,6 +18,8 @@
 @import "merchant-header";
 @import "navbar";
 @import "overlay";
+@import "placeholder";
 @import "product-card";
 @import "product-comment";
 @import "product-details-card";
+@import "product-form";
