--- a/app/views/shared/_navbar_merchant.html.erb
+++ b/app/views/shared/_navbar_merchant.html.erb
@@ -15,7 +15,7 @@
                 <p>Management</p>
                 <ul>
                   <<li><a href="/dashboard">Dashboard</a></li>
-                  <li><a href="/inventory">Inventory</a></li>
+                  <li><a href="/merchants/<%= current_merchant.id %>/inventory">Inventory</a></li>
                   <li><a href="/order">Orders</a></li>
                 </ul>
                 <p><a href="/account">Account</a></p>
@@ -35,7 +35,7 @@
 
     <ul class="categories-list">
         <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="/inventory">Inventory</a></li>
+        <li><a href="/merchants/<%= current_merchant.id %>/inventory">Inventory</a></li>
         <li><a href="/order">Orders</a></li>
     </ul>
   </div>
