--- a/app/views/merchants/inventory.html.erb
+++ b/app/views/merchants/inventory.html.erb
@@ -1,14 +1,10 @@
-
 <div class="product-list">
   <% @products.each do |product| %>
     <div class="product-card">
       <div class="product-img" style ="background-image: url(<%= cl_image_path product.photos[0].key %>)">
-        <div class="price">
-            <p><%= product.price %><%= currency_symbol %></p>
-        </div>
         <div class="product-icons">
           <div class="icon-btn">
-            <a href="#"><%= image_tag 'love-list-icon'%></a>
+            <a href="#"><%= image_tag 'edit-list-icon'%></a>
           </div>
         </div>
       </div>
@@ -16,9 +12,12 @@
         <%= link_to category_product_path(@category, product) do %>
           <h4><%= product.name %></h4>
         <% end %>
-        <%= link_to merchant_path(product.merchant) do %>
-          <p><%= product.merchant.name %></p>
+        <p>Stock</p>
+        <% total = 0 %>
+        <% product.product_variants.each do |variant| %>
+            <% total += variant.stock_qty.to_i %>
         <% end %>
+        <p><%= total %></p>
       </div>
     </div>
   <% end %>
