add link to add product to merchant inventory page

--- a/app/views/merchants/inventory.html.erb
+++ b/app/views/merchants/inventory.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div>
-
+    <%= link_to 'Add Product', new_product_path, class: 'add-cart-btn form-btn' %>
   </div>
   <div class="product-list">
     <% @products.each do |product| %>
