remove not mvp front end

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,7 @@
 .header{
   margin-top: 40px;
+  //remove the margin bottom when we have filters ans search bar
+  margin-bottom: 40px;
   height: 110px;
   background: #D7ECF1;
   position: relative;
