--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -96,9 +96,10 @@
 
           </div>
         </div>
-        <div class="icon-btn">
+        <!-- save wishlist icon -->
+<!--         <div class="icon-btn">
           <a href="#"><%= image_tag 'love-list-icon'%></a>
-        </div>
+        </div> -->
       </div>
 
     </div>
