--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
   <div class="header">
     <h1><%= @category.name %></h1>
   </div>
-  <div class="refine-results">
+<!--   <div class="refine-results">
     <div id="sort"><p>Sort by:</p></div>
     <div class="search-bar">
       <div id="search-icon" style="background-image: url(<%= image_path 'search-icon' %>)"></div>
@@ -27,7 +27,7 @@
       </div>
       <% end %>
       </ul>
-    </div>
+    </div> -->
     <div class="product-list">
       <% @products.each do |product| %>
             <div class="product-card">
@@ -35,11 +35,11 @@
                 <div class="price">
                   <p><%= product.price %><%= currency_symbol %></p>
                 </div>
-                <div class="product-icons">
+<!--                 <div class="product-icons">
                   <div class="icon-btn">
                     <a href="#"><%= image_tag 'love-list-icon'%></a>
                   </div>
-<!--                   <div class="icon-btn">
+                  <div class="icon-btn">
                     <%#= link_to line_items_path(product_variant_id: product.product_variants[0]), method: 'CREATE', class: 'add-to-cart' do %>
                       <#%= image_tag 'shopping-bag-icon' %>
                     <#% end %>
@@ -48,8 +48,8 @@
                       <p><i class="check-mark fas fa-check"></i></p>
                       <p>Successfully added to your cart</p>
                     </div>
-                  </div> -->
-                </div>
+                  </div>
+                </div> -->
               </div>
               <div class="product-infos">
                 <%= link_to category_product_path(@category, product) do %>
