--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -82,8 +82,8 @@
               </div>
             <% else %>
               <%= simple_form_for [@line_item] do |f| %>
-                <%= f.hidden_field :product_variant_id,
-                value: @product_variants[0] %>
+                <%= f.hidden_field :product_id,
+                value: @product_variants[0].product_id %>
                 <%= f.button :submit, 'ADD TO CART',class: 'add-cart-btn' %>
               <% end %>
             <% end %>
