--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -67,8 +67,6 @@
               </div>
             </div> -->
 
-
-
             <% if @category.name == 'Fashion' %>
               <div class="size">
                 <%= simple_form_for [@line_item] do |f| %>
@@ -82,8 +80,11 @@
               </div>
             <% else %>
               <%= simple_form_for [@line_item] do |f| %>
+
+                <%= f.hidden_field :product_variant_id,
+                value: @product_variants[0] %>
                 <%= f.hidden_field :product_id,
-                value: @product_variants[0].product_id %>
+                value: @product.id %>
                 <%= f.button :submit, 'ADD TO CART',class: 'add-cart-btn' %>
               <% end %>
             <% end %>
